# Stakewell

./: .gitignore  README.md  wrangler.toml
.github/workflows/: ci.yml
contracts/rewards/src/: lib.rs
contracts/staking/src/: lib.rs
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs
frontend/: .env.production  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ActivityFeed.tsx  Dashboard.tsx  IconRail.tsx  Navbar.tsx  Sidebar.tsx  StakePanel.tsx
frontend/lib/: contracts.test.ts  stellar.ts
