[package]
name = "stakewell-token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0.7", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "22.0.7", features = ["testutils", "alloc"] }
# Pins the version soroban-env-host 22.1.3's test PRNG path actually compiles
# against; its own dependency spec is an unbounded ">=2.0.0" that otherwise
# resolves to 3.0.0 and breaks (rand_core CryptoRng bound mismatch).
ed25519-dalek = "=2.2.0"

[features]
testutils = ["soroban-sdk/testutils"]
